[1.1.3]
* use mitmproxy instead of proxy.py : bigger distrib but lighter and faster runtime
* error log

[1.1.2]
* use noitka for the distribution (executable & archive)

[1.1.1]
* change repo structure
* smaller dist

[1.1]
* clean svip player database as soon as possible 

[1.0]
* find and wrap sfvip player with a proxy to add an All category in Vod and Series