@@ -1,6 +1,7 @@
 [1.1.3]
 * use mitmproxy instead of proxy.py : bigger distrib but lighter and faster runtime
-* error log
+* forward to users proxies
+* error log in cachedir
 
 [1.1.2]
 * use noitka for the distribution (executable & archive)
